--- a/writedown/zm/report/ref.bib
+++ b/writedown/zm/report/ref.bib
@@ -1,3 +1,27 @@
+
+@Article{prinz2011markov,
+  Title                    = {Markov models of molecular kinetics: Generation and validation},
+  Author                   = {Prinz, J.H. and Wu, H. and Sarich, M. and Keller, B. and Senne, M. and Held, M. and Chodera, J.D. and Sch{\"u}tte, C. and No{\'e}, F.},
+  Journal                  = {The Journal of chemical physics},
+  Year                     = {2011},
+  Pages                    = {174105},
+  Volume                   = {134},
+
+  File                     = {prinz2011markov.pdf:prinz2011markov.pdf:PDF;supplement material:prinz2011markov.support.pdf:PDF},
+  Timestamp                = {2012.02.17}
+}
+
+@article{lindorff2010improved,
+  title={Improved side-chain torsion potentials for the Amber ff99SB protein force field},
+  author={Lindorff-Larsen, Kresten and Piana, Stefano and Palmo, Kim and Maragakis, Paul and Klepeis, John L and Dror, Ron O and Shaw, David E},
+  journal={Proteins: Structure, Function, and Bioinformatics},
+  volume={78},
+  number={8},
+  pages={1950--1958},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+
 @article{alfe1998first,
   title={First-principles calculation of transport coefficients},
   author={Alfe, Dario and Gillan, Michael J},
