--- a/writedown/period.noneq.msm/ref.bib
+++ b/writedown/period.noneq.msm/ref.bib
@@ -3750,14 +3750,18 @@ year  = {2013},
   publisher = {Elsevier},
   timestamp = {2013.01.10}
 }
+@Article{seifert2012stochastic,
+  Title                    = {Stochastic thermodynamics, fluctuation theorems and molecular machines},
+  Author                   = {Seifert, Udo},
+  Journal                  = {Reports on Progress in Physics},
+  Year                     = {2012},
+  Number                   = {12},
+  Pages                    = {126001},
+  Volume                   = {75},
 
-@ARTICLE{seifert2012stochastic,
-  author = {Seifert, U.},
-  title = {Stochastic thermodynamics, fluctuation theorems, and molecular machines},
-  journal = {Arxiv preprint arXiv:1205.4176},
-  year = {2012},
-  file = {seifert2012stochastic.pdf:seifert2012stochastic.pdf:PDF},
-  timestamp = {2012.06.10}
+  File                     = {seifert2012stochastic.pdf:seifert2012stochastic.pdf:PDF},
+  Publisher                = {IOP Publishing},
+  Timestamp                = {2012.06.10}
 }
 
 @ARTICLE{seifert2005entropy,
