--- a/writedown/period.noneq.msm/ref.bib
+++ b/writedown/period.noneq.msm/ref.bib
@@ -1,5 +1,34 @@
 % This file was created with JabRef 2.8.
 % Encoding: ISO8859_1
+@article{latorre2011structure,
+  title={A structure-preserving numerical discretization of reversible diffusions},
+  author={Latorre, Juan C and Metzner, Philipp and Hartmann, Carsten and Sch{\"u}tte, Christof},
+  journal={Commun. Math. Sci},
+  volume={9},
+  number={4},
+  pages={1051--1072},
+  year={2011}
+}
+
+@article{sarich2010approximation,
+  title={On the approximation quality of Markov state models},
+  author={Sarich, Marco and No{\'e}, Frank and Sch{\"u}tte, Christof},
+  journal={Multiscale Modeling \& Simulation},
+  volume={8},
+  number={4},
+  pages={1154--1177},
+  year={2010},
+  publisher={SIAM}
+}
+
+@article{sarich2014utilizing,
+  title={Utilizing hitting times for finding
+  metastable sets in non-reversible Markov chains},
+  author={Sarich, Marco and Sch{\"u}tte, Christof},
+  journal={submitted},
+  year={2014}
+}
+
 
 @article{wang2014exploring,
   title={Exploring the conformational dynamics of alanine dipeptide in solution subjected to an external electric field: A nonequilibrium molecular dynamics simulation},
@@ -1213,13 +1242,13 @@ year  = {2013},
   timestamp = {2013.01.10}
 }
 
+
 @INPROCEEDINGS{djurdjevac2010markov,
   author = {Djurdjevac, N. and Sarich, M. and Sch{\\"u}tte, C.},
   title = {On Markov state models for metastable processes},
-  booktitle = {PROCEEDINGS OF THE INTERNATIONAL CONGRESS OF MATHEMATICIANS},
+  booktitle = {Proceedings of the International Congress of Mathematicians},
   year = {2010},
   volume = {901},
-  number = {2010},
   pages = {3105--3131},
   file = {djurdjevac2010markov.pdf:djurdjevac2010markov.pdf:PDF},
   timestamp = {2011.08.24}
